syntax="proto3";
package order;
option go_package=".";

// protoc --go_out=. --go-grpc_out=require_unimplemented_servers=false:. order.proto

service OrderHandler {
  rpc CreateOrder (CreateOrderRequest) returns (Order);
  rpc GetOrder (GetOrderRequest) returns (Order);
}

message CreateOrderRequest{
    int64 orderNumber = 1;
}

message GetOrderRequest{
  int64 orderNumber = 1;
}

message Order{
  int64   ID       = 1;
	string  Title    = 2;
	string  Content  = 3;
}
